infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: declutr-backend-svc
  namespace: declutr-prod
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: declutr-backend
---
apiVersion: v1
kind: Service
metadata:
  name: declutr-web-svc
  namespace: declutr-prod
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  selector:
    app: declutr-web
