infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: declutr-ingress
  namespace: declutr-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - app.declutr.io
    - api.declutr.io
    secretName: declutr-tls-cert
  rules:
  - host: app.declutr.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: declutr-web-svc
            port:
              number: 3000
  - host: api.declutr.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: declutr-backend-svc
            port:
              number: 8080
